# TuyaOpen

./: .gitignore  CMakeLists.txt  requirements.txt
apps/games/lvgl_games/config/: T3_LCD_DEVKIT_1_28.config  TUYA_T5AI_BOARD_LCD_3.5.config
apps/tuya.ai/ai_components/ai_picture/: Kconfig
apps/tuya.ai/ai_components/ai_ui/: CMakeLists.txt  Kconfig
apps/tuya.ai/your_chat_bot/: app_default.config
apps/tuya.ai/your_otto_robot/: Kconfig  README.md  README_zh.md
apps/tuya_cloud/camera_demo/: app_default.config
boards/: Kconfig
boards/ESP32/: Kconfig  OS_SERVICE_Kconfig  TKL_Kconfig
boards/ESP32/DNESP32S3/: Kconfig  dnesp32s3.c
boards/ESP32/DNESP32S3_BOX/: DNESP32S3-BOX.c  Kconfig
boards/ESP32/DNESP32S3_BOX2_WIFI/: Kconfig  dnesp32s3_box2_wifi.c
boards/ESP32/ESP32/: Kconfig  esp32_bread_board.c
boards/ESP32/ESP32-S3/: Kconfig
boards/ESP32/ESP32S3_BREAD_COMPACT_WIFI/: esp32s3_bread_compact_wifi.c
boards/ESP32/M5STACK_STICKS3/: CMakeLists.txt  Kconfig  board_com_api.h  board_config.h  m5stack_sticks3.c
boards/ESP32/M5STACK_STICKS3/example/: CMakeLists.txt
boards/ESP32/M5STACK_STICKS3/example/config/: M5STACK_STICKS3.config
boards/ESP32/M5STACK_STICKS3/example/src/: example_m5stack_sticks3_hw.c
boards/ESP32/WAVESHARE_ESP32S3_Touch_AMOLED_1.8/: Kconfig  Waveshare_ESP32_S3_Touch_AMOLED_1_8.c
boards/ESP32/XINGZHI_ESP32S3_CUDE_0.96_OLED_WIFI/: Kconfig  xingzhi-cube-0.96-oled-wifi.c
boards/ESP32/XTEINK_X4/: CMakeLists.txt  Kconfig  README.md  board_com_api.h  board_config.h  xteink_x4.c  xteink_x4_battery.c  xteink_x4_buttons.c  xteink_x4_buttons.h  xteink_x4_epd.c  xteink_x4_epd.h  xteink_x4_sdcard.c  xteink_x4_sdcard.h  xteink_x4_spi.c  xteink_x4_spi.h
boards/ESP32/XTEINK_X4/example/lvgl_demo/: CMakeLists.txt
boards/ESP32/XTEINK_X4/example/lvgl_demo/src/: example_xteink_x4_lvgl.c
boards/ESP32/common/: CMakeLists.txt
boards/GD32/: Kconfig  OS_SERVICE_Kconfig  TKL_Kconfig
boards/GD32/GIGADEVICE_GD32VM553H_EVAL/: Kconfig  board_com_api.c
boards/GD32/config/: GD32.config
boards/LINUX/DshanPi_A1/: tdd_button_keyboard.c  tdd_button_keyboard.h
boards/LINUX/Raspberry_Pi/: Kconfig
boards/T5AI/TUYA_T5AI_BOARD/: Kconfig  tuya_t5ai_ex_module.c  tuya_t5ai_ex_module.h
docs/: ai_ui_skill.md  printer_driver_guide.md
docs/superpowers/plans/: 2026-04-16-dp48-printer-driver.md  2026-04-16-picture-view-action-buttons.md
docs/superpowers/specs/: 2026-04-16-dp48-printer-driver-design.md  2026-04-16-picture-view-action-buttons-design.md
examples/graphics/lvgl_photo_album/: CMakeLists.txt  app_default.config
examples/peripherals/printer/: CMakeLists.txt  app_default.config
examples/peripherals/printer/config/: TUYA_T5AI_BOARD.config
examples/peripherals/printer/src/: example_printer.c  test_flower_jpeg.c
examples/protocols/http_service_portal/: CMakeLists.txt  README.md  README_CN.md
examples/protocols/http_service_portal/src/: example_http_service_portal.c  portal_web_assets.c  portal_web_assets.h
examples/protocols/http_service_portal/tools/: embed_web_assets.py
examples/protocols/http_service_portal/web/: index.html  provision_ok.html  status.html
examples/protocols/http_service_portal/web/assets/: app.js  style.css
platform/: platform_config.yaml
src/: Kconfig
src/audio_player/src/: svc_ai_player.c
src/image_album/: CMakeLists.txt  Kconfig
src/image_album/include/: image_album.h  image_album_scan.h  image_album_storage.h  image_album_thumb.h
src/image_album/src/: image_album.c  image_album_priv.h  image_album_scan.c  image_album_storage.c  image_album_thumb.c
src/image_album/src/storage/: image_album_storage_mem.c  image_album_storage_sd.c
src/libhttp/: CMakeLists.txt
src/libhttp/include/: http_captive.h  http_host.h  http_session.h  http_site.h
src/libhttp/src/: http_captive.c  http_host.c  http_session.c  http_site.c
src/libjpegturbo/: CMakeLists.txt  Kconfig
src/libjpegturbo/include/: jpegint.h
src/libjpegturbo/src/: jdatadst.c  jinclude.h  jmemnobs.c
src/liblvgl/: Kconfig
src/liblvgl/v9/: CMakeLists.txt
src/liblwip/port/: sys_arch.c
src/libtls/port/: tuya_tls_config.h
src/libu8g2/port/: u8g2_port_setup.c
src/peripherals/: CMakeLists.txt  Kconfig
src/peripherals/display/: Kconfig
src/peripherals/pmic/: Kconfig
src/peripherals/printer/: CMakeLists.txt  Kconfig
src/peripherals/printer/tdd_printer/include/: tdd_printer_dp48.h  tdd_printer_mtp02.h  tdd_printer_uart.h
src/peripherals/printer/tdd_printer/src/: tdd_printer_dp48.c  tdd_printer_mtp02.bak  tdd_printer_mtp02.c  tdd_printer_uart.c
src/peripherals/printer/tdl_printer/include/: tdl_printer_driver.h  tdl_printer_manage.h
src/peripherals/printer/tdl_printer/src/: tdl_printer_manage.c  utf8_to_gbk.c  utf8_to_gbk.h
src/tal_cli/src/: tal_cli.c
src/tal_driver/uart/: tal_uart.c
src/tal_image/include/: tal_image_jpeg_codec.h  tal_image_scale.h  tal_image_yuv422_to_rgb.h
src/tal_image/src/: tal_image_jpeg_codec.c  tal_image_scale.c
src/tal_security/include/: tal_symmetry.h
src/tal_security/src/: tal_symmetry.c
src/tal_system/include/: tal_event_info.h  tal_thread.h
src/tal_system/src/: tal_thread.c  tal_workq_service.c
src/tuya_ai_service/svc_ai_agent/: Kconfig
src/tuya_ai_service/svc_ai_basic/: Kconfig
src/tuya_ai_service/svc_ai_codec/: Kconfig
src/tuya_cloud_service/: CMakeLists.txt  Kconfig
src/tuya_cloud_service/cloud/: atop_service.c  mqtt_service.c  mqtt_service.h  tuya_cert_manager.c  tuya_cert_manager.h  tuya_device_meta.c  tuya_health.c  tuya_iot.c  tuya_ota.c
src/tuya_cloud_service/file_storage/: tuya_file_storage_com.c  tuya_file_storage_com.h  tuya_file_storage_dld.c  tuya_file_storage_dld.h  tuya_file_storage_upd.c  tuya_file_storage_upd.h
src/tuya_cloud_service/schema/: tuya_iot_dp.c
src/tuya_cloud_service/tls/: tuya_tls.c  tuya_tls.h
src/tuya_cloud_service/transport/: tuya_transport.c
tools/: convert_types.py
tools/cli_command/: cli_config.py  cli_flash.py  cli_monitor.py  cli_update.py  util.py  util_tyutool.py
tools/cli_command/tests/: test_util_tyutool.py
(+175 files in other folders)
